bad/mul_invalid_types_null_int.example_compiler_output
ERROR
[1mbad/mul_invalid_types_null_int.lat:3:7: [1;31merror: [0;1mmultiplication is defined only for int values, not `null` and `int`[m
	null * 0;
	     [1;32m^[m
